# rust-analyzer-long-completion

./: Cargo.toml
src/: main.rs
