[package]
name = "water"
version = "0.1.0"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
image = "0.22.3"
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" }
anyhow = "1.0.25"
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git" }
winit = "0.19.5"
